se3-dhcp (0.80~) stable; urgency=low

  * modification de la detection des imprimantes de la page des reservations
  * suppression des notices et passage en mysqli sur la page des reservations

 -- Laurent Joly <laurentjoly@orange.fr>  Mon, 14 Nov 2016 14:05:30 +0200

se3-dhcp (0.71~) stable; urgency=low

  * Ajout du mecanisme de boot iPXE

 -- denis <denis.bonnenfant@diderot.org>  Fri, 04 Feb 2017 10:05:30 +0100

se3-dhcp (0.70) stable; urgency=low

  * correctif des fonctions pour suppression des notices php
  * suppression des notices php 
  * modification base sql : ajout index unique et changement format donnees
  * passage en mysqli
  * securisation : interdiction de reserver hors plage de reservation
  * desactivation complete des fonctions d'integration et renommage des postes
	a partir de la page des baux actifs
  * modification du niveau de compatibilite

 -- Laurent Joly <laurentjoly@orange.fr>  Mon, 14 Nov 2016 01:45:30 +0200

se3-dhcp (0.66) stable; urgency=low

  * correctif en cours des fonctions pour suppression des notices
  * correctif d'un warning dans la page des reservations

 -- Laurent Joly <laurentjoly@orange.fr>  Mon, 07 Nov 2016 01:05:30 +0200

se3-dhcp (0.65) stable; urgency=low

  * correctif d'affichage de la page des reservations

 -- Laurent Joly <laurentjoly@orange.fr>  Mon, 07 Nov 2016 00:20:30 +0200


se3-dhcp (0.64) stable; urgency=low

  * update descr fields

 -- root <root@DevilXen>  Mon, 25 april 2016 00:20:30 +0200

se3-dhcp (0.63) stable; urgency=low

  * utf8 for postinst

 -- root <root@DevilXen>  Fri, 22 april 2016 15:18:10 +0200

se3-dhcp (0.62) stable; urgency=low

  * Modifs chemin fichier leases

 -- root <root@DevilXen>  Fri, 08 May 2015 00:23:53 +0200

se3-dhcp (0.61) stable; urgency=low

  * Modifs pour conf sudo

 -- root <root@DevilXen>  Thu, 07 May 2015 10:36:08 +0200

se3-dhcp (0.60) stable; urgency=low

  * version wheezy

 -- root <root@DevilXen>  Fri, 02 Jan 2015 22:46:36 +0100
